<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_description"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_mountains" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_component_height"
            android:layout_marginHorizontal="@dimen/field_horizontal_padding"
            android:autofillHints="emailAddress"
            android:background="@drawable/field_background"
            android:drawableStart="@drawable/ic_mail_white_24dp"
            android:drawablePadding="@dimen/field_drawable_padding"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/field_horizontal_padding"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:textSize="@dimen/field_text_size"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_component_height"
            android:layout_marginHorizontal="@dimen/field_horizontal_padding"
            android:layout_marginTop="20dp"
            android:autofillHints="textPassword"
            android:background="@drawable/field_background"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawablePadding="@dimen/field_drawable_padding"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/field_horizontal_padding"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:textSize="@dimen/field_text_size"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_component_height"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#CCCCCC"
            android:textSize="@dimen/text_view_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_component_height"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="#CCCCCC"
            android:textSize="@dimen/text_view_text_size"
            android:textStyle="bold" />
    </LinearLayout>


</FrameLayout>